tests/snapshots/compiler_error_fixtures/wrong_argument_count.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/wrong_argument_count.flx
== compile ==
failed (compile)
== diagnostics ==
error[E056]: Wrong Number Of Arguments

The `add` function takes 2 arguments, but 1 were provided.

  examples/compiler_errors/wrong_argument_count.flx:6:19
  |
1 | fn add(a: Int, b: Int) -> Int {
2 |     a + b
3 | }
4 | 
5 | fn main() -> Unit {
6 |     let ignored = add(1)
  |                   ^^^^^^
  |                   ------ 1 arguments provided here, expected 2

Help:
  Add 1 missing argument(s), for example: `add(arg1, arg2)`.
== stdout ==
<not executed>
